@@ -1,4 +1,5 @@
 -v4.7.0pre10
+- ADDED: Config option for particle effects on routed pipes
 - FIX: Multipart lights incorrectly sensing redstone
 - FIX: Crash when cutting Inverted Lamp blocks
 - FIX: Auto Crafter eating up multi-use items
